# SDL_test

./: CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
src/: CMakeLists.txt  main.cpp
